--- a/Lakeside_Film_Site/Web.config
+++ b/Lakeside_Film_Site/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="lakesidedb" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
-    AttachDbFilename=|DataDirectory|lakesidedb.mdf;Integrated Security=True;
+    AttachDbFilename=|DataDirectory|LakeSideDB.mdf;Integrated Security=True;
     Connect Timeout=30" providerName="System.Data.SqlClient" />
 </connectionStrings>
   <appSettings>
