--- a/Lakeside_Film_Site/Lakeside_Film_Site.csproj
+++ b/Lakeside_Film_Site/Lakeside_Film_Site.csproj
@@ -145,6 +145,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Admin\MemberList.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Home\ShowSessions.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
