--- a/Lakeside_Film_Site/Lakeside_Film_Site.csproj
+++ b/Lakeside_Film_Site/Lakeside_Film_Site.csproj
@@ -130,7 +130,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Film.cs" />
+    <Compile Include="Models\FilmCategory.cs" />
     <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\ViewModels\CheckModelVM.cs" />
+    <Compile Include="Models\ViewModels\FilmEditVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +150,8 @@
     <Content Include="Views\Admin\MemberList.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Home\ShowSessions.cshtml" />
+    <Content Include="Views\Admin\FilmEdit.cshtml" />
+    <Content Include="Views\Admin\FilmList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
