--- a/Lakeside_Film_Site/Lakeside_Film_Site.csproj
+++ b/Lakeside_Film_Site/Lakeside_Film_Site.csproj
@@ -125,16 +125,19 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\FilmController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Film.cs" />
     <Compile Include="Models\FilmCategory.cs" />
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\ViewModels\CheckModelVM.cs" />
     <Compile Include="Models\ViewModels\FilmEditVM.cs" />
+    <Compile Include="Models\ViewModels\FilmListVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +155,7 @@
     <Content Include="Views\Home\ShowSessions.cshtml" />
     <Content Include="Views\Admin\FilmEdit.cshtml" />
     <Content Include="Views\Admin\FilmList.cshtml" />
+    <Content Include="Views\Film\FilmList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
