--- a/Lakeside_Film_Site/Lakeside_Film_Site.csproj
+++ b/Lakeside_Film_Site/Lakeside_Film_Site.csproj
@@ -134,10 +134,13 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Film.cs" />
     <Compile Include="Models\FilmCategory.cs" />
+    <Compile Include="Models\FilmReview.cs" />
     <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Review.cs" />
     <Compile Include="Models\ViewModels\CheckModelVM.cs" />
     <Compile Include="Models\ViewModels\FilmEditVM.cs" />
     <Compile Include="Models\ViewModels\FilmListVM.cs" />
+    <Compile Include="Models\ViewModels\ReviewVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +159,7 @@
     <Content Include="Views\Admin\FilmEdit.cshtml" />
     <Content Include="Views\Admin\FilmList.cshtml" />
     <Content Include="Views\Film\FilmList.cshtml" />
+    <Content Include="Views\Member\MyReview.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
